# aki-json-pick

./: CHANGELOG.md  Cargo.toml  README.md  README.tpl  build.rs
docs/: review.1.md
fixtures/: 01.json  02.json  04.json  05.json  06.json  07.json  10.json  11.json
specs/: 0.requirements.md  1.acceptance-criteria.md  2.design.md  3.tasks.md
src/: lib.rs  main.rs  run.rs
src/conf/: cmd.help.rs.txt  cmd.match.rs.txt  parse.rs
tests/: helper.rs  test.rs  test_e.rs  test_l.rs  test_s.rs
xtask/src/: aki-json-pick-cmd.txt  gen_src_cmd.rs
