[package]
name = "aki-json-pick"
version = "0.1.10"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = """
The json pick out command.
"""
keywords = ["text", "filter", "json"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2021"
rust-version = "1.63.0"
repository = "https://github.com/aki-akaguma/aki-json-pick"

[lib]
name = "libaki_json_pick"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "aki-json-pick"
path = "src/main.rs"

[features]
default = []
debian_build = []

[dependencies]
anyhow = "1.0"
atty = "0.2"
colored_json = "3.2"
flood-tide = { version="0.2", default-features=true, features=["stop_at_mm"] }
jql = { version="5.2", default-features=false }
runnel = "0.4"
memx-cdy = "0.1"
serde_json = "1.0"

[dev-dependencies]
indoc = "2.0"
exec-target = "0.2"

[build-dependencies]
rust-version-info-file = "0.2"

[workspace]
members = [
    "xtask",
]

[package.metadata.deb]
features = ["debian_build"]
section = "AAA-text"
priority = "optional"
maintainer = "aki <aki.akaguma@hotmail.com>"
extended-description = """\
The json pick out command.
"""
depends = "$auto"
separate-debug-symbols = true
assets = [
    ["target/release/aki-json-pick", "usr/bin/aki-json-pick", "755"],
    ["target/rust-version-info.txt", "usr/share/doc/aki-json-pick/", "644"],
    ["README.md", "usr/share/doc/aki-json-pick/", "644"],
]
